# LinuxDev2020

./: README.md
03_TerminalProject/: Makefile  Show.c
04_Multifile/: Makefile
05_Environmental/: CMakeLists.txt  pcre.c
06_Debugging/: double-free.c
07_DebuggingTracing/: Makefile  wrapper.c
08_TestingCoverage/: Makefile.am  configure.ac
08_TestingCoverage/src/: MakeFile.am  buf.c  buf.h  libbuf.c
08_TestingCoverage/tests/: Makefile.am  test1.c  test1.ts
09_I18nL10n/: Makefile.am  configure.ac  num_guess.c  num_guess.pot  ru.po
10_Documenting/: Makefile.am  configure.ac  num_guess.c  num_guess.man  num_guess.pot  ru.po
12_ScriptingText/: Makefile.am  configure.ac  num_guess.c  num_guess.h
13_PatchInstall/: Makefile.am  configure.ac  num_guess.c  ru.po
